Update On the Inverse Problem of Reaction Kinetics Presentation.tex
Added comments for potential presentation sections

--- a/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
+++ b/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
@@ -38,4 +38,16 @@
 		\tableofcontents
 	\end{frame}
 	
+	%motivation
+	
+	%problem description
+	
+	%proof of solution
+	
+	%proof of injectivity
+	
+	%future problems
+	
+	%presentation of web utility
+	
 \end{document}
