Imported font to remove warning

--- a/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
+++ b/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
@@ -6,6 +6,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{centernot}
+\usepackage{lmodern}% http://ctan.org/pkg/lm
 
 %presentation information
 \title{On the Inverse Problem of Reaction Kinetics}
