Added date to paper

--- a/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
+++ b/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
@@ -10,7 +10,7 @@
 
 %presentation information
 \title{On the Inverse Problem of Reaction Kinetics}
-\subtitle{J{\'a}nos T{\'o}th, Vera H{\'a}rs}
+\subtitle{J{\'a}nos T{\'o}th, Vera H{\'a}rs, 1979}
 \author{Adam Hammes, Charlie Labuzzetta, Nyle Sutton}
 \institute{Iowa State University}
 \date{\today}
