Charlie's Slides Added

--- a/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
+++ b/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
@@ -45,6 +45,12 @@
 	
 	%proof of solution
 	
+	\include{Proof_of_Theorem_Forward.tex}
+	
+	\include{Proof_of_Theorem_Reverse.tex}
+	
+	\include{Algorithm_Description.tex}
+	
 	%proof of injectivity
 	
 	%future problems
