Update On the Inverse Problem of Reaction Kinetics Presentation.tex

--- a/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
+++ b/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
@@ -42,6 +42,7 @@
 	%motivation
 	
 	%problem description
+	\include{Theorem_Description.tex}
 	
 	%proof of solution
 	
@@ -52,6 +53,9 @@
 	\include{Algorithm_Description.tex}
 	
 	%proof of injectivity
+	\include{Proof_of_Injectivity_Setup.tex}
+	\include{Proof_of_Injectivity_Case_1.tex}
+	\include{Proof_of_Injectivity_Case_2.tex}
 	
 	%future problems
 	
