--- a/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
+++ b/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
@@ -40,25 +40,36 @@
 	\end{frame}
 	
 	%motivation
+	\section{Motivation}
+	\begin{frame}
+	%This frame is a place holder.
+	\end{frame}
 	
 	%problem description
+	\section{Main Result}
 	\include{Theorem_Description.tex}
 	
 	%proof of solution
-	
 	\include{Proof_of_Theorem_Forward.tex}
-	
 	\include{Proof_of_Theorem_Reverse.tex}
-	
 	\include{Algorithm_Description.tex}
 	
 	%proof of injectivity
+	\section{Injectivity of Algorithm}
 	\include{Proof_of_Injectivity_Setup.tex}
 	\include{Proof_of_Injectivity_Case_1.tex}
 	\include{Proof_of_Injectivity_Case_2.tex}
 	
 	%future problems
+	\section{Future Endeavors}
+	\begin{frame}
+	%This frame is a place holder.
+	\end{frame}
 	
 	%presentation of web utility
+	\section{Web Utiltiy}
+	\begin{frame}
+	%This frame is a place holder.
+	\end{frame}
 	
 \end{document}
