--- a/Presentation/Theorem_Description.tex
+++ b/Presentation/Theorem_Description.tex
@@ -2,7 +2,7 @@
 \begin{center}
 A mass-action CRN can be behaviorally represented by a system of differential
 equations in which $\forall x \in \Lambda$, the behavior equation for $x$ is
-precisely of the form $\dot{[x]} = p - [x]q$, where $p$ and $q$ are polynomials
+precisely of the form $[\dot{x}] = p - [x]q$, where $p$ and $q$ are polynomials
 of the species concentrations with nonnegative, real coefficients.
 \end{center}
 \end{frame}
