--- a/Presentation/Proof_of_Theorem_Forward.tex
+++ b/Presentation/Proof_of_Theorem_Forward.tex
@@ -7,6 +7,6 @@
 	\begin{center} \(\exists x \in \Lambda\), which \(q_{\rho}(x) > p_{\rho}(x)\) for \(\phi_{\rho}(x) = k_{\rho}(\textbf{p}_{\rho}(x) - \textbf{q}_{\rho}(x))\) \end{center}
 \begin{align*}
 	[\dot x] & = \sum_{\rho \in R^+} \phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)} - x\sum_{\rho \in R^-} -\phi_{\rho}(x) [x]^{\textbf{r}_{\rho}(x)-1} \prod_{x \neq y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)} \\
-	[\dot x] & = p - xq
+	[\dot x] & = p - [x]q
 \end{align*}
 \end{frame}
