Input instead of include, typo

--- a/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
+++ b/Presentation/On the Inverse Problem of Reaction Kinetics Presentation.tex
@@ -47,18 +47,19 @@
 	
 	%problem description
 	\section{Main Result}
-	\include{Theorem_Description.tex}
+	\input{Theorem_Description.tex}
 	
 	%proof of solution
-	\include{Proof_of_Theorem_Forward.tex}
-	\include{Proof_of_Theorem_Reverse.tex}
-	\include{Algorithm_Description.tex}
+	\input{Proof_of_Theorem_Forward.tex}
+	\input{Proof_of_Theorem_Reverse.tex}
+	\input{Algorithm_Description.tex}
 	
 	%proof of injectivity
 	\section{Injectivity of Algorithm}
-	\include{Proof_of_Injectivity_Setup.tex}
-	\include{Proof_of_Injectivity_Case_1.tex}
-	\include{Proof_of_Injectivity_Case_2.tex}
+
+	\input{Proof_of_Injectivity_Setup.tex}
+	\input{Proof_of_Injectivity_Case_1.tex}
+	\input{Proof_of_Injectivity_Case_2.tex}
 	
 	%future problems
 	\section{Future Endeavors}
@@ -67,7 +68,7 @@
 	\end{frame}
 	
 	%presentation of web utility
-	\section{Web Utiltiy}
+	\section{Web Utility}
 	\begin{frame}
 	%This frame is a place holder.
 	\end{frame}
