Switched to align* environment

--- a/Presentation/Algorithm_Description.tex
+++ b/Presentation/Algorithm_Description.tex
@@ -1,14 +1,11 @@
 \begin{frame}{Differential Equation to CRN Algorithm}
     
-    \begin{center}
-    \(\dot x = -2 \alpha x^{2}v + 2 \gamma z^{4}\)
-    
-    \(\dot y = 3 \alpha x^{2}v - 3 \beta y^{3}v^{2}\)
-    
-    \(\dot z = 4 \beta y^{3}v^{2} - 4 \gamma z^{4}\)
-    
-    \(\dot v = \alpha x^{2}v - 2 \beta y^{3}v^{2} + \gamma z^{4}\)
-    \end{center}
+    \begin{align*}
+    \dot x &= -2 \alpha x^{2}v + 2 \gamma z^{4} \\
+    \dot y &= 3 \alpha x^{2}v - 3 \beta y^{3}v^{2} \\
+    \dot z &= 4 \beta y^{3}v^{2} - 4 \gamma z^{4} \\
+    \dot v &= \alpha x^{2}v - 2 \beta y^{3}v^{2} + \gamma z^{4}
+    \end{align*}
 
 		\begin{picture} (300, 100)
         	
