--- a/Presentation/Proof_of_Theorem_Reverse.tex
+++ b/Presentation/Proof_of_Theorem_Reverse.tex
@@ -2,7 +2,7 @@
     
 	For a system of differential equations of the form \(\dot x = p - xq\) there exists a unique "canonic mechanism" which can be algorithmically derived from the differential equations.\newline
         
-  	For each differential equation, each chemical complex belonging to the products \(p\) of form \(\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)} is increased by \(\dot x\) at rate \(\phi_{p(x)}\). Each of the chemical complexes belonging to the reactants \(r\), uneffected by negative cross effects and of form \(x\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)} is decreased by \(\dot x\) at rate \(\phi_{p(x)}\).\newline
+  	For each differential equation, each chemical complex belonging to the products \(p\) of form \(\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)}\) is increased by \(\dot x\) at rate \(\phi_{p(x)}\). Each of the chemical complexes belonging to the reactants \(r\), uneffected by negative cross effects and of form \(x\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)}\) is decreased by \(\dot x\) at rate \(\phi_{p(x)}\).\newline
         
         %product equation before: \(\phi_{p(x)}\textbf{p}_{y \in \Lambda}^{\textbf{r}_{p(y)}}\) 
       	%reactant equation before: \(x\phi_{p(x)}q_{y \in \Lambda}^{\textbf{r}_{p(y)}}\)
