--- a/Presentation/Proof_of_Theorem_Reverse.tex
+++ b/Presentation/Proof_of_Theorem_Reverse.tex
@@ -8,7 +8,7 @@
     
     \(\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)} \to \phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)} + x\) \newline
   	
-  	Each chemical complex belonging to the sum of the reactants \(r\), uneffected by negative cross effects and of form \(x\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)}\) is decreased by \(x\) at rate \(\phi_{\rho}(x)\).\newline
+  	Each chemical complex belonging to the sum of the reactants \(r\), uneffected by nonnegative cross effects and of form \(x\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)}\) is decreased by \(x\) at rate \(\phi_{\rho}(x)\).\newline
     
     \(x\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)} \to x\phi_{\rho}(x) \prod_{y \in \Lambda} [y]^{\textbf{r}_{\rho}(y)} -  x\)\newline
         
